Create UIContext interface
Changes:
- UIContext allows UI Component to location the simulation and communicate with other UI Component
- MainDesktopPane implement new UIContent to startr isolate of MDI approach from UI Components
- Move ContentPanel creation to a new ToolRegistry factory class
- ContentPanel takes a name as a constructor argument; update subclasses
- EntityLabel & MapSelector are based on the UIContext and not the actual desktop
- ContentWindow delegates update and destroy to ContentPanel

Ref #1798